2004-03-05  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b110

	* Bugfix 909453: updated image frame html to resize frame with its
	  content allowing image frames to be used with fit-to-window.

2004-03-05  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b109

	* Fixed play button in low-tech slideshow.

	* Bugfix 842224: adhere to slideshow-length setting in low-tech.

2004-03-05  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b108

	* Change: Fixed session state bug in slideshow.  If $gallery->album
	  wasn't set, an error occured when trying to call class functions

2004-03-05 Jens Tkotz <jens@peino.de> 1.4.3-cvs-b107
	
	* Change: Replaced table in adminAlbumCommands with a div.

2004-03-05  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b106

	* Change: Stage 2 of a fix for bug 903936 -
	  1. Changing all non-AlbumItem references to AlbumItem::isAlbumName
	     to getAlbumName()
	  2. Implement isAlbum() in if blocks where determination of an album
	     is made

2004-03-04  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b105

	* Change: Stage 1 of a fix for bug 903936 -
          1. Changing all calls to isAlbumName() into getAlbumName()
          2. Addition of the isAlbum() function to the Album class

2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b104

	* Updated frame layout so TT/BB (top/bottom) images are repeated
	  instead of stretched (left/right images already do this).
	  Also omit TTL/TTR/BBL/BBR/LLT/LLB/RRT/RRB cells if size is zero.

	* Set unused cells in wooden/notebook frames to zero.

	* Added new Golden frame.  Contributed by stormfrog.

2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b103

	* Cascade of highlight-rebuild: to be safe, don't cascade if
	  parent album needs to be upgraded to current album_version.

2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b102

	* Bugfix: removed extra ?> in albums.php.

2004-03-04  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b101
