@@ -1,3 +1,9 @@
+2004-03-05  Jay Rossiter <cryptographite@users.sf.net> 1.4.3-cvs-b111
+
+	* Bug 847194: Allow "0000" as an itemCaptureDate
+	  Clarified allows date ranges (1970-2069), and details for
+	  two digit date remapping
+
 2004-03-05  Alan Harder  <alan.harder@sun.com> 1.4.3-cvs-b110
 
 	* Bugfix 909453: updated image frame html to resize frame with its
